- interpret function is now called list_call;
- bruter still doing functions calls and such, but you need to make the lists manually, which is not hard at all, but;
- you can also use buxu, its basically the old bruter, those removed features like parsing, labeling and such are now part of buxu;

(25/04/2025) - version 0.8.3

- say goodbye to the '' "" and (@) delimiters
- welcome back {} demiliter for string, it is the only string delimiter now, and supports recursion of course;
- labels introduced, a easy way to name values, and keep track of them;
- label example: @name value;
- name is saved for the next call, and assigned to the value's label slot;
- "NULL" does not exist anymore;
- hashes are now called labels, which is a more apropriate name, beside that, they are the same;
- no more hash() macro;
- the parser now deals with \) and \} correctly;
- label_set and label_unset are not a thing anymore;
- new macros: data_l and arg_l, both for getting the INDEX of the slot;
- new macros: data_ls and arg_ls, both get NAME STRING of the slot;
- labels strings are also stored direclty in the vm->values list like the strings;

(23/04/2025) - version 0.8.2

- strings system is completely reworked;
- NULL is now ALWAYS @0;
- @@word operator removed;
- no variable is set to auto free at the end of the program anymore;
- strings are now allocated in the values list itself instead of using a new allocation for each string;
- @ operator removed;
- (@@) operator replaced by (@);

(19/04/2025) - version 0.8.1

- some of the code been rewritten;
- there are no more types, no more hash_names neither hash_indexes;
- the vm now is 2 lists: vm.values(formely vm.stack) and vm.hashes;
- str_duplicate and str_nduplicate are back;
- lists are not macros anymore;
- new type: List, since lists are not macros anymore, there is only one type of list for everything, it is based on the Value union;
- new macro: hash;
- bit, hex and octal numbers are now supported: 0b, 0x and 0o;