@@ -1,43 +1,13 @@
 
 # BRUTER
 
-
 *`UNDER HEAVY DEVELOPMENT`*
-
-
-# Reserved
-
-- `()` = expression
-
-- `{}` = string delimiter
-
-- `;` = end of command separator
-
-# Usage
-
-    command;
-    command ...;
-    command (command (command ...));
-    command variable_1 variable_2 ...;
-    command {string};
-    command @name value;
-    command 0b00000000;
-    command 0x00000000;
-    command 0o00000000;
-    command 0.000000;
-    command 0;
 
 # Concept
 
   BRUTER does not have types, everything is a sequence of 4 or 8 bytes, depending on the system;
 
   BRUTER does not keep a track of what the user meant to each variable, it just stores the data, it is up to the user to keep track of what is what if needed;
-
-  BRUTER does have only 2 delimiters (expression) and {string};
-
-  BRUTER does not have a garbage collector, it is up to the user to free the memory when needed;
-
-  BRUTER does not have a AST, it is structure is already a tree, so it is not needed;
 
 # Building instructions
 
